[package]
name = "ternoa-associated-accounts"
version = "1.0.0"
edition = "2021"
license = "Apache 2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Frame
frame-benchmarking = { git = "https://github.com/capsule-corp-ternoa/substrate", branch = "ternoa-substrate-2022-03-24", default-features = false, optional = true }
frame-support = { git = "https://github.com/capsule-corp-ternoa/substrate", branch = "ternoa-substrate-2022-03-24", default-features = false }
frame-system = { git = "https://github.com/capsule-corp-ternoa/substrate", branch = "ternoa-substrate-2022-03-24", default-features = false }

# Sp
sp-runtime = { git = "https://github.com/capsule-corp-ternoa/substrate", branch = "ternoa-substrate-2022-03-24", default-features = false }
sp-std = { git = "https://github.com/capsule-corp-ternoa/substrate", branch = "ternoa-substrate-2022-03-24", default-features = false }

# Rest
parity-scale-codec = { default-features = false, features = ["derive", "max-encoded-len"], version = "3.1.2" }
serde = { optional = true, version = "1.0.132" }
log = { default-features = false, version = "0.4.14"}
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

# Ternoa
ternoa-common = { default-features = false, path = "../common" }
primitives = { package = "ternoa-pallets-primitives", default-features = false, path = "../primitives" }

# We needs this dependencies to run our tests
[dev-dependencies]
pallet-balances = { git = "https://github.com/capsule-corp-ternoa/substrate", branch = "ternoa-substrate-2022-03-24" }
sp-core = { git = "https://github.com/capsule-corp-ternoa/substrate", branch = "ternoa-substrate-2022-03-24", default-features = false }
sp-io = { git = "https://github.com/capsule-corp-ternoa/substrate", branch = "ternoa-substrate-2022-03-24", default-features = false }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "serde",
    "sp-runtime/std",
    "sp-std/std",
    "ternoa-common/std",
    "primitives/std",
    "scale-info/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
]