[package]
name = "ternoa-auction"
version = "1.0.2"
authors = ["Ternoa"]
edition = "2021"
license = "GPL-3.0-only"
homepage = "https://www.ternoa.com/"
repository = "https://github.com/capsule-corp-ternoa/ternoa-pallets"
description = "Ternoa Pallet for Auctions"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Frame
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }

# Sp
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-arithmetic = { workspace = true, default-features = false }

# Rest
parity-scale-codec = { default-features = false, features = ["derive", "max-encoded-len"], workspace = true }
log = { default-features = false, workspace = true }
scale-info = { workspace = true, default-features = false, features = ["derive"] }

# Ternoa
ternoa-common = { default-features = false, path = "../common" }
primitives = { package = "ternoa-pallets-primitives", default-features = false, path = "../primitives" }

# We needs this dependencies to run our tests
[dev-dependencies]
ternoa-nft = { default-features = false, path = "../nft" }
ternoa-marketplace = { default-features = false, path = "../marketplace" }
ternoa-tee = { default-features = false, path = "../tee" }
pallet-balances = { workspace = true }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "ternoa-common/std",
    "primitives/std",
    "ternoa-nft/std",
    "scale-info/std",
    "ternoa-marketplace/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
]
try-runtime = ["frame-support/try-runtime"]