[package]
name = 'ternoa-bridge'
version = '1.0.0'
authors = ["Ternoa"]
edition = '2021'
license = "GPL-3.0-only"
homepage = "https://www.ternoa.com/"
repository = "https://github.com/capsule-corp-ternoa/ternoa-pallets"
description = "Ternoa Pallet for Ternoa ETH-NATIVE Bridge"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Substrate Frame
frame-benchmarking = { git = "https://github.com/capsule-corp-ternoa/substrate", tag = "ternoa-substrate-2022-10-01", default-features = false, optional = true }
frame-support = { git = "https://github.com/capsule-corp-ternoa/substrate", tag = "ternoa-substrate-2022-10-01", default-features = false }
frame-system = { git = "https://github.com/capsule-corp-ternoa/substrate", tag = "ternoa-substrate-2022-10-01", default-features = false }

# Substrate Primitives
sp-core = { git = "https://github.com/capsule-corp-ternoa/substrate", tag = "ternoa-substrate-2022-10-01", default-features = false }
sp-io = { git = "https://github.com/capsule-corp-ternoa/substrate", tag = "ternoa-substrate-2022-10-01", default-features = false }
sp-runtime = { git = "https://github.com/capsule-corp-ternoa/substrate", tag = "ternoa-substrate-2022-10-01", default-features = false }
sp-std = { git = "https://github.com/capsule-corp-ternoa/substrate", tag = "ternoa-substrate-2022-10-01", default-features = false }

# Rest
parity-scale-codec = { default-features = false, features = ["derive", "max-encoded-len"], version = "3.1.5" }
serde = { optional = true, version = "1.0.137" }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }

[dev-dependencies]
pallet-balances = { git = "https://github.com/capsule-corp-ternoa/substrate", tag = "ternoa-substrate-2022-10-01" }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"serde",
	"scale-info/std",
	"sp-std/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-core/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
]

runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]