[package]
name = 'ternoa-bridge'
version = '1.0.0'
authors = ["Ternoa"]
edition = '2021'
license = "GPL-3.0-only"
homepage = "https://www.ternoa.com/"
repository = "https://github.com/capsule-corp-ternoa/ternoa-pallets"
description = "Ternoa Pallet for Ternoa ETH-NATIVE Bridge"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Substrate Frame
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }

# Substrate Primitives
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

# Rest
parity-scale-codec = { default-features = false, features = ["derive", "max-encoded-len"], workspace = true }
serde = { optional = true, workspace = true }
scale-info = { workspace = true, default-features = false, features = ["derive"] }

[dev-dependencies]
pallet-balances = { workspace = true }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"serde",
	"scale-info/std",
	"sp-std/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-core/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
]

runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]