[package]
name = "ternoa-common"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Frame
frame-support = { git = "https://github.com/capsule-corp-ternoa/substrate", branch = "ternoa-substrate-2022-03-24", default-features = false }

# Sp
sp-runtime = { git = "https://github.com/capsule-corp-ternoa/substrate", branch = "ternoa-substrate-2022-03-24", default-features = false }
sp-std = { git = "https://github.com/capsule-corp-ternoa/substrate", branch = "ternoa-substrate-2022-03-24", default-features = false }
sp-arithmetic = { git = "https://github.com/capsule-corp-ternoa/substrate", branch = "ternoa-substrate-2022-03-24", default-features = false }

# Ternoa
primitives = { package = "ternoa-pallets-primitives", default-features = false, path = "../primitives" }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "sp-runtime/std",
    "sp-std/std",
    "primitives/std",
]