[package]
name = "ternoa-common"
version = "1.0.2"
authors = ["Ternoa"]
edition = "2021"
license = "GPL-3.0-only"
homepage = "https://www.ternoa.com/"
repository = "https://github.com/capsule-corp-ternoa/ternoa-pallets"
description = "Ternoa Pallet for External Interfaces"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Frame
frame-support = { workspace = true, default-features = false }

# Sp
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-arithmetic = { workspace = true, default-features = false }

# Ternoa
primitives = { package = "ternoa-pallets-primitives", default-features = false, path = "../primitives" }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "sp-runtime/std",
    "sp-std/std",
    "primitives/std",
]