[package]
name = "ternoa-mandate"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0-only"
authors = [ "Eliott Teissonniere" ]
homepage = "https://www.ternoa.com/"
repository = "https://github.com/capsule-corp-ternoa/ternoa-pallets"
description = "Ternoa Pallet for Mandate"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Substrate Frame
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }

# Substrate Orubate
sp-std = { workspace = true, default-features = false }

# Rest
parity-scale-codec = { default-features = false, features = ["derive", "max-encoded-len"], workspace = true }
scale-info = { workspace = true, default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "sp-std/std",
    "frame-benchmarking/std",
]
try-runtime = ["frame-support/try-runtime"]