[package]
name = "ternoa-pallets-primitives"
version = "1.0.1"
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Substrate Frame Pallets
frame-support = { git = "https://github.com/capsule-corp-ternoa/substrate", branch = "ternoa-substrate-2022-06-21", default-features = false }

# Substrate Primitives
sp-runtime = { git = "https://github.com/capsule-corp-ternoa/substrate", branch = "ternoa-substrate-2022-06-21", default-features = false }
sp-std = { git = "https://github.com/capsule-corp-ternoa/substrate", branch = "ternoa-substrate-2022-06-21", default-features = false }
sp-arithmetic = { git = "https://github.com/capsule-corp-ternoa/substrate", branch = "ternoa-substrate-2022-06-21", default-features = false }

# Rest
parity-scale-codec = { default-features = false, features = ["derive", "max-encoded-len"], version = "3.1.5" }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
	# Frame
	"frame-support/std",
	# SP
	"sp-runtime/std",
    "sp-std/std",
	# Rest
	"parity-scale-codec/std",
	"scale-info/std",
]
