[package]
name = "ternoa-pallets-primitives"
version = "1.0.2"
authors = ["Ternoa"]
edition = "2021"
license = "GPL-3.0-only"
homepage = "https://www.ternoa.com/"
repository = "https://github.com/capsule-corp-ternoa/ternoa-pallets"
description = "Ternoa Pallet for Ternoa Primitives"



[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Substrate Frame Pallets
frame-support = { workspace = true, default-features = false }

# Substrate Primitives
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-arithmetic = { workspace = true, default-features = false }

# Rest
parity-scale-codec = { default-features = false, features = ["derive", "max-encoded-len"], workspace = true }
scale-info = { workspace = true, default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
	# Frame
	"frame-support/std",
	# SP
	"sp-runtime/std",
    "sp-std/std",
	# Rest
	"parity-scale-codec/std",
	"scale-info/std",
]
